--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-taggit==3.1.0
 django-taggit-templatetags2==1.6.1
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
 importlib-metadata==6.0.0
 Markdown==3.4.1
