--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,102 @@
+appnope==0.1.3
 asgiref==3.6.0
+asttokens==2.2.1
+async-generator==1.10
+attrs==22.2.0
+backcall==0.2.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
+CacheControl==0.12.11
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
+channels==4.0.0
 charset-normalizer==3.0.1
 cryptography==39.0.0
-Django==4.1.5
+decorator==5.1.1
+Django==3.2.20
+django-baton==2.7.1
 django-classy-tags==4.0.0
 django-cors-headers==3.13.0
 django-filter==22.1
 django-taggit==3.1.0
+django-taggit-autosuggest==0.4.1
+django-taggit-serializer==0.1.7
 django-taggit-templatetags2==1.6.1
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+exceptiongroup==1.1.0
+executing==1.2.0
+firebase-admin==6.1.0
+google-api-core==2.11.0
+google-api-python-client==2.86.0
+google-auth==2.18.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+grpcio==1.54.2
+grpcio-status==1.54.2
+gunicorn==20.1.0
+h11==0.14.0
+httplib2==0.22.0
 idna==3.4
 importlib-metadata==6.0.0
+ipython==8.11.0
+jedi==0.18.2
+kkconst==1.1.3
+lxml==4.9.2
 Markdown==3.4.1
-mysql-connector-python==8.0.32
+matplotlib-inline==0.1.6
+msgpack==1.0.5
+mysql-connector-python==8.1.0
 mysqlclient==2.1.1
+numpy==1.24.2
+outcome==1.2.0
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
-protobuf==3.20.3
+prompt-toolkit==3.0.38
+proto-plus==1.22.2
+protobuf==4.21.12
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
+Pygments==2.14.0
+PyJWT==2.7.0
 PyMySQL==1.0.2
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.1
 pytz==2022.7.1
 requests==2.28.2
+rsa==4.9
+selenium==4.8.2
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+stack-data==0.6.2
+StatusCode==1.0.0
+tqdm==4.64.1
+traitlets==5.9.0
+trio==0.22.0
+trio-websocket==0.9.2
+uritemplate==4.1.1
 urllib3==1.26.14
+wcwidth==0.2.6
+webdriver-manager==3.8.5
+wsproto==1.2.0
 zipp==3.11.0
-django-taggit-autosuggest==0.4.1
-channels==4.0.0
-firebase-admin==6.1.0
-django-baton==2.7.1
-pyOpenSSL==23.2.0
